# god-port-oracle

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GATES.md  PRD.md  README.md  SECURITY.md  STACK.md  TEST-STRATEGY.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
.codex/: hooks.json
broky/: cli.py
broky/backtest/: __init__.py  compare.py  engine.py  (+2 more)
data/: xau-data
metty/: cli.py
scripts/: backfill_trend_features.py  backfill_v6_training_data.py  backtest_chart.py  backtest_live_config.py  backtest_ml_filter.py  backtest_mtf.py  backtest_partial_tp.py  backtest_reversal_premium.py  backtest_to_ml.py  compare_backtest_configs.py  compare_trend_modes.py  deploy-vps.sh  deploy_vps.sh  diagnose_signals.py  evaluate_v6_model.py  migrate_db.py  oracle_runner.py  pre-deploy-check.sh  pre_deploy_checks.py  process_premium_data.py  s1_s5_sweep.py  s4_threshold_sweep.py  s5_mtf_sweep.py  session-report-to-pm.sh  smoke-test-ml.py  sync_ghost_trades.py  threshold_scan.py  train_v12_buy_models.py  verify_reversal_signal.py  vps-setup.sh
shared/: __init__.py  events.py  logging_utils.py  models.py
tests/: test_account_registry.py  test_backtest.py  test_data_pipeline.py  test_db_inserts.py  test_events.py  test_feature_registry.py  test_indicators.py  test_llm_analyzer.py  test_m5_scalp_integration.py  test_ml_predictor.py  test_models.py  test_position_checks.py  test_regime_consistency.py  test_registry.py  test_reversal_signal.py  test_risk.py  test_scaling.py  test_signal_generator.py  test_synth_pipeline.py
ψ/: .gitignore  identity.md
(+312 files in other folders)
